# Alko-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  makefile  pyproject.toml  render.yaml
.github/workflows/: scrape.yml
app/: Dockerfile  main.py
app/routers/: products.py
app/schemas/: products.py
app/services/: products.py
app/templates/: health.html  stats.html
data/: metadata.json  products.parquet
mcp/: Dockerfile  mcp_server.py
scraper/: fetch_products.py
tests/: conftest.py  test_products_service.py
tests/http/: test.http
